<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/textView_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="37dp"
        android:text="@string/subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_author" />

    <TextView
        android:id="@+id/textView_calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textView_calificacion"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_calificacion"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/editText_calificacion"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView_calificacion"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name" />

    <TextView
        android:id="@+id/textView_total_calificaciones"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="85dp"
        android:text="@string/textView_total_calificaciones"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_promedio_grupo_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_calificacion" />

    <Button
        android:id="@+id/button_capturar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/button_capturarCalif"
        android:textColorLink="@color/design_default_color_secondary"
        app:layout_constraintBottom_toTopOf="@+id/textView_total_calificaciones"
        app:layout_constraintStart_toStartOf="@+id/editText_calificacion" />

    <TextView
        android:id="@+id/textView_promedio_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="293dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textView_promedio_grupo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_mejor_calificacion"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_promedio_grupo_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/promedio_grupo_resultado"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_mejor_calificacion_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_mejor_calificacion_resultado" />

    <TextView
        android:id="@+id/textView_mejor_calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textView_mejor_calificacion"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_mejor_calificacion_resultado"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_mejor_calificacion_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mejor_calificacion_resultado"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_promedio_grupo"
        app:layout_constraintStart_toEndOf="@+id/textView_promedio_grupo"
        app:layout_constraintTop_toBottomOf="@+id/textView_promedio_grupo" />

</androidx.constraintlayout.widget.ConstraintLayout>